--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -75,7 +75,15 @@
         owner: pi
         group: pi
 
-    - name: Set permissions on /src child items
+    - name: Copy ../src files to pi
+      copy:
+        src: ../src
+        dest: /home/pi
+        owner: pi
+        group: pi
+        mode: '0770'
+
+    - name: Set permissions on ../src child items
       become: yes
       file:
         path: /home/pi/src
@@ -83,7 +91,6 @@
         owner: pi
         group: pi
         mode: '0770'
-        recurse: yes
 
     #####################
     # server source config
